syntax = "proto3";
option java_multiple_files = true;

option csharp_namespace = "gRPCService";

package dk.SEP3JAVA.databaseOperations;

service DatabaseOperationService
{
  rpc opretVagt(OpretVagtRequest) returns (APIResponse);
  rpc redigerVagt(RedigerVagtRequest) returns (APIResponse);
  rpc fjernVagt(FjernVagtRequest) returns (APIResponse);
  rpc opretMedarbejder(OpretMedarbejderRequest) returns (APIResponse);
}

message OpretVagtRequest {
  string date = 1;
  string fromHour = 2;
  string fromMinute = 3;
  string toHour = 4;
  string toMinute = 5;
  string workerId = 6;
  string breakAmount = 7;
  string bossId = 8;
}

message RedigerVagtRequest {
  string vagtId = 1;
  string date = 2;
  string fromHour = 3;
  string fromMinute = 4;
  string toHour = 5;
  string toMinute = 6;
  string workerId = 7;
  string breakAmount = 8;
  string bossId = 9;
}

message FjernVagtRequest {
  string vagtId = 1;
}

message OpretMedarbejderRequest {
  string firstName = 1;
  string lastName = 2;
  string mail = 3;
  string phoneNumber = 4;
  string address = 5;
}

message APIResponse {
  string responseMessage = 1;
  string responseCode = 2;
}

